src/objects/Asia1__c.object
<CustomObject>
    <fields>
        <fullName>ASIAONE_Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>ASIAONE Legacy Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Access_Flag_Name__c</fullName>
        <description>This field has been created in order to ease batch process.</description>
        <label>Access Flag Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Date_Expiration__c</fullName>
        <label>Base Date Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Recipient Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Asia1s</relationshipLabel>
        <relationshipName>AsiaOne</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <label>Display Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EnabledCount__c</fullName>
        <label>EnabledCount</label>
        <summaryFilterItems>
            <field>Asia1_Subscription__c.Status__c</field>
            <operation>equals</operation>
            <value>Enabled</value>
        </summaryFilterItems>
        <summaryForeignKey>Asia1_Subscription__c.Asia1__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Active__c</fullName>
        <formula>EnabledCount__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Already Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID_Already_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ID Already Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Link_Expired_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Link Expired/Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <label>Legacy Created By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_By__c</fullName>
        <label>Legacy Updated By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_Date__c</fullName>
        <label>Legacy Updated Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log__c</fullName>
        <label>Reason for Failure</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__r.Phone)), Contact__r.Phone,
IF(NOT(ISBLANK(Contact__r.HomePhone)), Contact__r.HomePhone, 
IF(NOT(ISBLANK(Contact__r.HomePhone__c)), Contact__r.HomePhone__c, 
IF(NOT(ISBLANK(Contact__r.Mobile_Number__c)), Contact__r.Mobile_Number__c,
Contact__r.Mobile_Number_2__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret_Answer__c</fullName>
        <label>Secret Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret_Question__c</fullName>
        <label>Secret Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_ID_LDAP_ID__c</fullName>
        <label>User ID/LDAP ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Asia1</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Display_Name__c</columns>
        <columns>Email__c</columns>
        <columns>User_ID_LDAP_ID__c</columns>
        <columns>Password__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Base_Date_Expiration__c</columns>
        <columns>Display_Name__c</columns>
        <columns>Email__c</columns>
        <columns>ID_Already_Active__c</columns>
        <columns>Is_Link_Expired_Used__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Password__c</columns>
        <columns>Log__c</columns>
        <columns>Contact__c</columns>
        <columns>Secret_Answer__c</columns>
        <columns>Secret_Question__c</columns>
        <columns>Status__c</columns>
        <columns>User_ID_LDAP_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A1{0000000000}</displayFormat>
        <label>Asia1</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asia1s</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Display_Name_Validation_on_Chars</fullName>
        <active>true</active>
        <description>[KCampang] 08/12/2014. SCR_OrderEntry_CAR_52. Display Name must be between 3 and 50 characters.</description>
        <errorConditionFormula>(LEN( Display_Name__c )&lt;=3 || LEN( Display_Name__c )&gt;= 50) &amp;&amp; ISNEW() &amp;&amp;  ISNULL(Legacy_Created_Date__c)</errorConditionFormula>
        <errorMessage>Display Name must be between 3 and 50 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Display_Name_field_Validation</fullName>
        <active>true</active>
        <description>[KCampang] 08/11/2014. SCR_OrderEntry_CAR_52.</description>
        <errorConditionFormula>NOT(REGEX( Display_Name__c , &quot;[A-Za-z0-9]+([._,-@]?[A-Za-z0-9]+)*$&quot;)) &amp;&amp;  ISNEW() &amp;&amp;  ISNULL(Legacy_Created_Date__c)</errorConditionFormula>
        <errorDisplayField>Display_Name__c</errorDisplayField>
        <errorMessage>Display Name should start with at least one alphanumeric character. It may include a symbol like a dot(.), an underscore(_), a dash (-),  comma(,) or an at sign (@).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LDAP_ID_Validation_on_Number_of_Chars</fullName>
        <active>true</active>
        <description>[KCampang] 08/12/2014. SCR_OrderEntry_CAR_51. Username must be between 8 and 50 characters and cannot be greater than 50 characters.</description>
        <errorConditionFormula>AND(
OR(LEN( User_ID_LDAP_ID__c)&lt;8, LEN( User_ID_LDAP_ID__c)&gt;50 ),
ISNULL(Legacy_Created_Date__c)
)</errorConditionFormula>
        <errorDisplayField>User_ID_LDAP_ID__c</errorDisplayField>
        <errorMessage>Username must be between 8 and 50 characters and cannot be greater than 50 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LDAP_User_ID_Validation</fullName>
        <active>true</active>
        <description>[KCampang] 08/11/2014. SCR_OrderEntry_CAR_51.</description>
        <errorConditionFormula>AND( 
Contact__r.Account.RecordType.Name = &quot;Direct Individual&quot;,
(NOT
	( 
		OR
		(
			(REGEX( User_ID_LDAP_ID__c ,&quot;[A-Za-z0-9]+[._]?[A-Za-z0-9]+$&quot;)), 
			(REGEX(User_ID_LDAP_ID__c , &quot;(.+)@(.+\\.){1,3}[\\w]{2,4}$&quot;))
		)
	)
),
ISNULL(Legacy_Created_Date__c)
)</errorConditionFormula>
        <errorDisplayField>User_ID_LDAP_ID__c</errorDisplayField>
        <errorMessage>LDAP User Id should start with at least one alphanumeric character and end with at least one alphanumeric character. It may include a dot(.) or an underscore(_). It may also be in this form xxxxx@xxxx.xxxx.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Password_Validation_for_Number_of_Chars</fullName>
        <active>true</active>
        <description>[KCampang] 08/12/2014. SCR_OrderEntry_CAR_53. Password is not in the range 5 through 40.</description>
        <errorConditionFormula>AND(
OR(LEN(Password__c)&lt;5, LEN( Password__c)&gt;40),
ISNEW(),
ISNULL(Legacy_Created_Date__c)
)</errorConditionFormula>
        <errorDisplayField>Password__c</errorDisplayField>
        <errorMessage>Password is not in the range 5 through 40.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_for_Password</fullName>
        <active>true</active>
        <description>[KCampang] 08/12/2014. SCR_OrderEntry_CAR_53. Password has to match regex ^[a-zA-Z0-9._]+$</description>
        <errorConditionFormula>AND(
NOT( REGEX( Password__c , &quot;^[a-zA-Z0-9._]+$&quot;)),
ISNEW(),
ISNULL(Legacy_Created_Date__c)
)</errorConditionFormula>
        <errorDisplayField>Password__c</errorDisplayField>
        <errorMessage>Invalid password format.</errorMessage>
    </validationRules>
</CustomObject>